added chatroom data transfer object and genereted docs
