# docs/swagger.json
@@ -104,11 +104,11 @@
                 "parameters": [
                     {
                         "description": "Chatroom deletion information",
-                        "name": "schema.DeleteChat",
+                        "name": "DeleteChatDTO",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schema.DeleteChat"
+                            "$ref": "#/definitions/delivery.DeleteChatDTO"
                         }
                     }
                 ],
@@ -217,11 +217,11 @@
                 "parameters": [
                     {
                         "description": "User chat information",
-                        "name": "schema.Param",
+                        "name": "EnterChatDTO",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schema.Param"
+                            "$ref": "#/definitions/delivery.EnterChatDTO"
                         }
                     }
                 ],
@@ -286,6 +286,31 @@
         }
     },
     "definitions": {
+        "delivery.DeleteChatDTO": {
+            "type": "object",
+            "properties": {
+                "cid": {
+                    "type": "integer"
+                },
+                "uid": {
+                    "type": "integer"
+                }
+            }
+        },
+        "delivery.EnterChatDTO": {
+            "type": "object",
+            "properties": {
+                "cid": {
+                    "type": "integer"
+                },
+                "roomPassword": {
+                    "type": "string"
+                },
+                "uid": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Chatroom": {
             "type": "object",
             "properties": {
@@ -309,31 +334,6 @@
                 "content": {},
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "schema.DeleteChat": {
-            "type": "object",
-            "properties": {
-                "chatroom": {
-                    "type": "integer"
-                },
-                "deleterID": {
-                    "type": "integer"
-                }
-            }
-        },
-        "schema.Param": {
-            "type": "object",
-            "properties": {
-                "chatroomID": {
-                    "type": "integer"
-                },
-                "chatroomPassword": {
-                    "type": "string"
-                },
-                "userID": {
-                    "type": "integer"
                 }
             }
         }
